--- a/VRChat/06/1003906.html
+++ b/VRChat/06/1003906.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HJob43J7rTaSA+L63S/aft1BUBAPzuqNcldyf79by70="></script>
+    "B8im9cTXdyKPheJUvDiXF02yEl0+VicokvqGMyiChXQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「エビフライ＆エビぐるみ」","description":"3Dモデル「エビフライ＆エビぐるみ」\nポリゴン数はエビフライが1254、エビぐるみが2342です。\nVRChatで使う場合エビフライはアニメーションオーバーライドで出すことになると思うので問題ないと思いますが、エビぐるみは2万ポリゴンオーバーに気をつけてください。\nもっとも、着ぐるみを着る以上もとの服はいらないので、服を削除すれば比較的楽に2342ポリゴン削減できると思います。\n詳しい編集方法はブログ記事をご覧ください。\nhttps://bironist.hatenablog.com/entry/2018/09/06/202829","url":"https://booth.pm/ja/items/1003906","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/d9b60374-3610-4f75-b074-c7d96f64e6f0/i/1003906/f6e766e9-d01b-456f-9e83-cc993461f3a9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HJob43J7rTaSA+L63S/aft1BUBAPzuqNcldyf79by70="></script>
+    nonce="B8im9cTXdyKPheJUvDiXF02yEl0+VicokvqGMyiChXQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -534,9 +534,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
