--- a/VRChat/74/1002974.html
+++ b/VRChat/74/1002974.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Wo+ovhPH0GGp8ME9upQSiHYthPWn8/viZjA0i/ElP/M="></script>
+    "QGbIJGzrEju1e0SiCRkTysH7BlsJfh92jlZN8SWrDPs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」","description":"アサルトフレーム001：砲撃機「テトラ」\n\n試しに売ってみる事にしました\nVRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル\n「四角い砲撃機」と言うイメージで作り始めたからテトラ\nコトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています\n\n2018/12/31\nアップデートしました\n\n2020/01/28\nふぃぎゅあばたー参加モデルになりました","url":"https://booth.pm/ja/items/1002974","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1002974/6724c624-129e-44e3-9d57-d650a8639477_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Wo+ovhPH0GGp8ME9upQSiHYthPWn8/viZjA0i/ElP/M="></script>
+    nonce="QGbIJGzrEju1e0SiCRkTysH7BlsJfh92jlZN8SWrDPs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -470,9 +470,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
