--- a/VRChat/05/1001605.html
+++ b/VRChat/05/1001605.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aCHHfB+zAQklJEk23runDtnOFFs7zb8iAFCgYYeY2W8="></script>
+    "Qtua2M/zTxF7yFb91w3dpeZ2BkvX5oorhbuXMlkLLsY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"さとかぜ夏祭り特別仕様　飲み物三種セット","description":"2018年8月29日、VRChat内で行われたイベント「さとかぜ夏祭り」にてワールドに置かれていた飲み物三種のセットです。\n※ラムネに感してのみ若干の修正が入っているため見た目にほんのり相違があります。\n\n自作のワールドに配置してみる、飲み会イベントに持参するなど、ご自由にお使いいただけます。\n\n\n－－－－－－－－－－－－－－－－－－－－－－－－\nこの飲み物はバーチャル御庭ん番youtuberである「さとかぜ」、その飼主である「宮丘風郷」殿の許可をいただき制作・販売しています。\n\nさとかぜ[バーチャル御庭ん番]のチャンネルにご登録いただけますと彼の励みになります故、こちらもどうぞよろしくお願いいたします。\nhttps://www.youtube.com/channel/UCFhFFh2ymODh2z9MI8hke3w\n\nまた、会場で流れていた「さとかぜ音頭」についても販売されています！こちらも応援してあげてね！\nhttps://satokazebooth.booth.pm/items/1006573\n－－－－－－－－－－－－－－－－－－－－－－－－\n\n\n※「お茶」と「ビール」の名前が逆になっていますが、名前だけで内容に問題はありません。ややこしいことをお詫び申し上げますm(_ _)m\n\n\n\n\n\n\n\n","url":"https://booth.pm/ja/items/1001605","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1001605/1c7ed0fd-badd-4665-ae24-4f62f5a041df_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aCHHfB+zAQklJEk23runDtnOFFs7zb8iAFCgYYeY2W8="></script>
+    nonce="Qtua2M/zTxF7yFb91w3dpeZ2BkvX5oorhbuXMlkLLsY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
