--- a/VRChat/99/1001199.html
+++ b/VRChat/99/1001199.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1S1VP7eoukMdlWGDxNyZeWU3RrVac2ZmfxwEk+bfPmE="></script>
+    "LYQfQlvfnRAiNIGN9Vvj28rERBCuW5KIg4LwK1uY8cs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"りょうさん型ケイロカミオカカスタムテクスチャ","description":"【製品内容】\n・テクスチャ\n\n【説明】\nシアトルからやってきた例の奴が登場だ！\nこのカスタムテクスチャでお友達のケイロカミオカと差をつけよう！高品質ケイロカミオカですべてを薙ぎ払え！三色セットで配布開始！！！\n\nというかテクスチャってカテゴリ何に入れればいいんだ？イラスト素材？３Dモデル？わからん\n\n\n\n【免責事項】\n当テクスチャを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【利用規約】\n既存のKeiroKamioka(MassProduction)りょうさん型ケイロカミオカモデル内のAbout.txt準拠とする\n","url":"https://booth.pm/ja/items/1001199","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1001199/89c63e20-dba9-47c9-a4bb-6cf5ba5bcfd8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1S1VP7eoukMdlWGDxNyZeWU3RrVac2ZmfxwEk+bfPmE="></script>
+    nonce="LYQfQlvfnRAiNIGN9Vvj28rERBCuW5KIg4LwK1uY8cs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
