--- a/VRChat/82/1000982.html
+++ b/VRChat/82/1000982.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NOy0Z1mhjz50gOrC95AsiJq3JuPSmaMr6Npun6K4fuI="></script>
+    "E/bOcIZWIf0N79vgvgMXxc+6Sm8ghOKHnRh87V1EoEw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BP]フレイル型モーニングスター","description":"[BP]フレイル型モーニングスター Ver1.0\n\n●商品説明\n振り回し可能なフレイル型モーニングスターとなります。\n飾りありとなしの2種類のテクスチャを同梱しております。\n＊DynamicBone推奨\n\n●内容物\nReadme.txt　　　　　　　　　（はじめにお読みください）\nMorningStar.fbx　　　　　 　　(モーニングスター本体)\nMorningStar_○○_Albedo.png　（Albedoマップ）\nMorningStar_○○_Metallic.png（Metallicマップ）\nMorningStar_○○_Normal.png　（Normalマップ）\nMorningStar.unitypackage\nMSDB設定図　　　　　　　　　　(DynamicBoneの推奨数値)\n\nポリゴン数:2748\n\n●利用規約\n改変・商用利用は可となります。\n＊取り出せる形での配布は禁止となります。\n\n【免責事項】\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n何かご質問がありましたらTwitter:@buchipanda_VRまでご連絡をお願いします。","url":"https://booth.pm/ja/items/1000982","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/aabbb614-482e-4b6d-8e57-4b27696be81e/i/1000982/cb40ebfc-8487-4f6c-a97d-e75ee3cfe609_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NOy0Z1mhjz50gOrC95AsiJq3JuPSmaMr6Npun6K4fuI="></script>
+    nonce="E/bOcIZWIf0N79vgvgMXxc+6Sm8ghOKHnRh87V1EoEw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -416,9 +416,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
