--- a/VRChat/33/1000933.html
+++ b/VRChat/33/1000933.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Yip5mQ3wyDdoEfPT0zgI87sy7MXW5NTqqSbegLGFKCc="></script>
+    "D4rjBphEs4NCuN6pLpB23+bCFFwwcFuZk3IK1iKN5hc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「LGI XSDSH-9」","description":"本作品はUnityでの利用を想定したunitypackage形式の3DCG銃器モデル、「LGI XSDSH-9」です。\n細部の調整やテクスチャの変更、Unity以外での使用にも対応出来るようにunitypackage以外にfbx形式も同梱しております。\n\n本作品はテストサンプル、試作品となっております。使用上の問題や不満な点、改善の要望などフィードバックは\nTwitterID@darakeruZer0\nまで、随時承っております。\n","url":"https://booth.pm/ja/items/1000933","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/deba127e-8158-4166-adea-d6a482459dd1/i/1000933/078dc0e2-84a9-4287-95eb-6a2631306987_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Yip5mQ3wyDdoEfPT0zgI87sy7MXW5NTqqSbegLGFKCc="></script>
+    nonce="D4rjBphEs4NCuN6pLpB23+bCFFwwcFuZk3IK1iKN5hc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
