--- a/VRChat/04/990104.html
+++ b/VRChat/04/990104.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PWQ4D6iRrzw6DW2m/DR7xkBZbI9mmqdf2ogv84Hi9s8="></script>
+    "sJw5hxrdrC5SQ3X83+KgtQ9KTuzeIyY4cbsdg/vX1Pc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ねこじゃらし Cat toy","description":"\nVRChat使用想定、Dynamic Bone対応　「ねこじゃらし」\n\n224ポリゴン\n\n\nアバターに持たせて揺らせば、先端のフワフワがフリフリ揺れます。\n着せ替えテクスチャ5種類入り！お好みのカラーを選べます。\nカラーそれぞれのprefab設定済み。\n\nフレンドさんと遊んだり、初めて会った人との会話のきっかけ作りなどに使っていただけるかなと思います♪\n\nファーシェーダーは使っていません。テクスチャで表現しています。\n\n※Dynamic Boneお持ちの方推奨。\n\nシェーダーはUnlitWFを使っています。prefabでcutout等の設定済みですので、なるべく同じシェーダーを使用されることをお勧めします。\nhttps://github.com/whiteflare/Unlit_WF_ShaderSuite/releases\n\n\n＜アップデート＞\n2020. 4.15　カラーごとのprefabを作ったunitypackageを追加しました。シェーダーをUnlitWFに変更しました。\n2019.03.07　ボーン、オブジェクトの変更をしました。\n","url":"https://booth.pm/ja/items/990104","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/990104/7bedfdae-fdbe-481b-ae34-4f207df572a9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PWQ4D6iRrzw6DW2m/DR7xkBZbI9mmqdf2ogv84Hi9s8="></script>
+    nonce="sJw5hxrdrC5SQ3X83+KgtQ9KTuzeIyY4cbsdg/vX1Pc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -470,9 +470,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
