--- a/VRChat/88/999188.html
+++ b/VRChat/88/999188.html
@@ -107,7 +107,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "3qwzPjvFHG6PO0xfKuhftnxdVj09Fbjin49DXtJyiWU="></script>
+    "/X0H72RAmVIaUQy73GIbZLBjJ/z4w1mPAYrfbCd9kag="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF 魔法の杖（ウォンド）4色セット","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\nローポリファンタジー杖。所謂ウォンド。\n4色セット。先っぽにトレイルレンダラーをつけてみたりするのはいかが？\n\n三角面：428\n\nバージョン2でました\nMCF Wand V2（魔法の杖）　https://miyakon.booth.pm/items/4114010\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/999188","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/999188/2f1d73d4-b391-469c-809b-7c48d9aa4206_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3qwzPjvFHG6PO0xfKuhftnxdVj09Fbjin49DXtJyiWU="></script>
+    nonce="/X0H72RAmVIaUQy73GIbZLBjJ/z4w1mPAYrfbCd9kag="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -404,9 +404,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
