--- a/VRChat/36/998836.html
+++ b/VRChat/36/998836.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "bBrM4HxjgoQIE7hgQ051C7FvrYF5D+UWxtHhtp3QGOU="></script>
+    "YfzWMl+BGiHrstlSxpbfh605G5I5xL8JmVI35kMn1A0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"一眼同田貫【VRChat対応】","description":"フルスクラッチの日本刀「一眼同田貫」です\n同封のパーティクルを設定することで、刀身から紅葉を散らすことができます\n\nポリゴン数：1614△\n(鞘656△+刀身058△)\n\nVRChatでの使用を想定しています","url":"https://booth.pm/ja/items/998836","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b3455261-78a7-4395-ad3c-ee3028c2242e/i/998836/3525c9a9-1c2a-49f9-8573-21094ec42b2d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bBrM4HxjgoQIE7hgQ051C7FvrYF5D+UWxtHhtp3QGOU="></script>
+    nonce="YfzWMl+BGiHrstlSxpbfh605G5I5xL8JmVI35kMn1A0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -501,9 +501,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
