--- a/VRChat/40/998840.html
+++ b/VRChat/40/998840.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EzVIg+Z0a4huWRg+IRF+J9ghnAou1lI6RtZ5pooGIQo="></script>
+    "0aZBwEHQlBZVHfmogcyEINLO6krhpkxxY1XjJiAkfjA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　たまご動物シリーズ　「たまご猫」","description":"◆オリジナル3Dモデル VRChat用アバターたまご動物シリーズ第三弾\n 「たまご猫」\n\n製作者:Ｋ参鬼(けいさんき）\n\n◆概要\nオリジナル3DモデルVRChat用アバターです。\nUnityPackageデータを同梱していますので手軽にVRChatにアップロードできます。\n\n\n◆利用規約\n\n　※当モデルデータを利用された方は下記利用規約すべての内容に同意したものとみなされます。\n\n　・当モデルデータの著作権は「Ｋ参鬼」が所有します。\n　・当モデルデータの使用時に著作権表示の必要はありません。\n　・当モデルデータは営利目的での利用が可能です。\n\n◆禁止事項\n\n　・改変の有無にかかわらず、第三者が利用可能な状態での再配布、アップロード。\n　・本モデルの自作発言\n　・他人を不快にさせる目的での使用\n　・公序良俗に反する行為。\n\n◆同梱データ\n\n　・たまご猫.fbx\n　・UnityPackageデータ一式\n　・たまご猫テクスチャ.png\n　・たまご猫UV.png\n　・Readme.txt\n\n◆免責事項\n\n　・モデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません\n\n◆連絡先\n\n　不具合不明点等がありましたら以下に連絡ください。\n　\n　twitter : @ksanki\n　https://twitter.com/ksanki\n\n\n規約 ver.1.0\n(規約テンプレート作成、仔鹿様 twitter : @_new_338)","url":"https://booth.pm/ja/items/998840","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a17f37a6-c78d-44b0-bc94-21a5a6410ec5/i/998840/f2f0a357-feb6-47d7-8453-770a0c01ffdf_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EzVIg+Z0a4huWRg+IRF+J9ghnAou1lI6RtZ5pooGIQo="></script>
+    nonce="0aZBwEHQlBZVHfmogcyEINLO6krhpkxxY1XjJiAkfjA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -440,9 +440,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
