--- a/VRChat/67/997867.html
+++ b/VRChat/67/997867.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "4NSQYsJQ/4wr22M8XuK0stVmS8uR+L8x/7FvcM/9qR8="></script>
+    "i1rQLD3L1/rOZ1A5M1BINOQjQSc/USuS3RYEvH5biTg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】NKF-AG47-A アルゲンタムブラスター","description":"NKF-AG47-A アルゲンタムブラスター\n\n■商品概要\nVRChatでの仕様を想定したSF架空銃です。\n基本色は赤で、色を変更した青も入っています。\nunitypackageを同梱しているので簡単に導入することが出来ます。\n△3178ポリゴン\n\n■使い方\n・テクスチャの変更\n青のテクスチャを使いたい場合はマテリアルのAlbedoのみを変更してください。\n\n■免責事項\n本データの利用によって生じたいかなる損害について、当方は一切の責任を負いません。\n\n■禁止事項\n・本データの再配布、転載を禁止します。\n・本データの作者を偽る行為を禁止します。\n・本データを用いた迷惑行為、他者を侮辱する行為\n・宗教的、政治的な用途での利用\n\n■許可事項\n・改変\n・本データを用いたアバターやワールドをVRChat上にアップロードする行為\n・本モデルを動画、静止画などの形で公共の場にアップロードすること\n\n上記規約は告知なく改変される可能性があります。\n\n■更新履歴\n2018/9/1: v1.0\n\n■連絡先\n黒金ニエロ\nbooth https://niello.booth.pm/\nホームページ https://niellochannel.wixsite.com/ojousama\nTwitter @Niello_virtual","url":"https://booth.pm/ja/items/997867","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/8285a99a-4ad9-4431-9d71-56e82927bcf2/i/997867/4c535b38-02d9-4c8a-bda7-ef0a2bff760d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4NSQYsJQ/4wr22M8XuK0stVmS8uR+L8x/7FvcM/9qR8="></script>
+    nonce="i1rQLD3L1/rOZ1A5M1BINOQjQSc/USuS3RYEvH5biTg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
