--- a/VRChat/45/997745.html
+++ b/VRChat/45/997745.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cwUFmg2tXlomu+PLC1nxCJsKmLPY0EcZuQrfBie6ljA="></script>
+    "ZnSg2NX51R3w4Yl/x9c2nEy3AGUrEerkhg7id4u9G3E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鏡餅型　ローポリ Zipファイル","description":"テストでアップロードしました。\n\n\nZipファイル・約800ポリゴンの簡素な鏡餅です。\n\nVRChatでの使用を想定しています。\n\n\n小物やアバターなどお好きなように使用可能です。\n\n\n\nテクスチャ無しのモデルデータ（材質には簡単に色が付いています）のみになります。\n\n\n・ボーンは設定していません\n\n\n＊改造、改変などは自由です\n＊使用の際はツイッターまでメンション（@wataribito）を飛ばしてもらえると嬉しいです","url":"https://booth.pm/ja/items/997745","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fdd1190f-85e0-40d1-9e66-ede1399a3a63/i/997745/e4498b88-c9a5-42e9-a230-840e1ff7f69b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cwUFmg2tXlomu+PLC1nxCJsKmLPY0EcZuQrfBie6ljA="></script>
+    nonce="ZnSg2NX51R3w4Yl/x9c2nEy3AGUrEerkhg7id4u9G3E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
